[package]
name = "kpsolver"
version = "0.1.0"
edition = "2021"

[lib]
name = "kpsolver"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minilp = "0.2.2"
ndarray = "0.15.6"
num-traits = "0.2"
good_lp = { version = "*", features = ["cplex-rs", "coin_cbc", "highs", "scip"], default-features = true }

[dev-dependencies]
